<resources>
    <string name="app_name" translatable="false">WeMob</string>
    <string name="language">Язык</string>
    <string name="ru">Русский</string>
    <string name="en">Англиский</string>
    <string name="sign_in">Войти</string>
    <string name="sign_out">Выйти</string>
    <string name="settings">Настройки</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="fullname">ФИО</string>
    <string name="address">Адрес</string>
    <string name="phone_number">Телефон номер</string>
    <string name="phones">Телефоны</string>
    <string name="dealer">Дилер</string>
    <string name="taxi_expense">Расход на такси</string>
    <string name="map">Карта</string>
    <string name="save">Сохранить</string>
    <string name="demo">Демо</string>
    <string name="demo_data">Демо данные</string>
    <string name="business_processes">Бизнес процессы</string>
    <string name="cause">Причина</string>
    <string name="demo_result">Результат демо</string>
    <string name="contract_type">Тип договора</string>
    <string name="price_list">Прайс лист</string>
    <string name="no_data">Нет данных</string>
    <string name="master">Мастер</string>
    <string name="service_address">Адрес сервиса</string>
    <string name="service">Сервис</string>
    <string name="result">Результат</string>
    <string name="list_of_applications">Список заявок</string>
    <string name="fin_agent">Финансовый агент</string>
    <string name="info">Инфо</string>
    <string name="plan">План</string>
    <string name="search">Поиск</string>
    <string name="close">Закрыть</string>
    <string name="restart">Перезагрузить</string>
    <string name="send_sms">Отправить смс</string>
    <string name="sms_sent">Смс отправлено</string>
    <string name="user_confirmed">Пользователь подтвердил</string>
    <string name="receive_customer_confirmation">Получить подтверждению клиента</string>
    <string name="successfully_saved">Успешно сохранен</string>
    <string name="not_saved">Не сохранен</string>
    <string name="completed">Завершен</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="point_a">Точка А</string>
    <string name="point_b">Точка B</string>
    <string name="unknown_error">Произошла ошибка повторите попытку позже</string>
    <string name="recommendation">Рекомендация</string>
    <string name="recommendations_saved">Рекомендации сохранены</string>
    <string name="remove">Удалить</string>
    <string name="demo_successfully_saved">Демо успешно обновлен</string>
    <string name="password">Пароль</string>
    <string name="statuses">Статусы</string>
    <string name="leaving">Выезжаю</string>
    <string name="got_to_the_address">Доехал до адреса</string>
    <string name="quantity">Количество</string>
    <string name="all">Все</string>
    <string name="filters">Фильтры</string>
    <string name="_new">Новый</string>
    <string name="sort_by_properties">Сортировка по свойствам</string>
    <string name="date">Дата</string>
    <string name="name">Имя</string>
    <string name="status">Статус</string>
    <string name="price">Сумма</string>
    <string name="cn">CN</string>
    <string name="sort">Сортировка</string>
    <string name="search_by">Поиск по</string>
    <string name="monthly_plan">Ежемесячный план</string>
    <string name="expired_days">Просроченные дни</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отмена</string>
    <string name="unfinished">Незавершенные</string>
    <string name="enter_valid_phone_number">Введите действующий номер телефона</string>
    <string name="have_not_allowed_access_to_the_camera">Вы не разрешили доступ к камеру</string>
    <string name="have_not_allowed_access_to_the_location">Вы не разрешили доступ к местоположению</string>
    <string name="internet_is_not_connected">Интернет-соединение не подключен</string>
    <string name="note">Примечание</string>
    <string name="service_process_started">Сервис процесс начался</string>
    <string name="service_process_finished">Сервис процесс закончился</string>
    <string name="really_want_to_change_status_of_plan">Вы точно хотите изменить статус плана ?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="contract_date">Дата договора</string>
    <string name="payment_date">Дата оплаты</string>
    <string name="show">Показать</string>
    <string name="hide">Скрыть</string>
    <string name="paid">Оплачено</string>
    <string name="show_payment_schedule">Показать график платежей</string>
    <string name="hide_payment_schedule">Скрыть график платежей</string>
    <string name="first_payment">Первоначальный платеж</string>
    <string name="payment_method">Способ оплаты</string>
    <string name="server">Сервер</string>
    <string name="the_amount_of_the_deal">Сумма договора</string>
    <string name="the_amount_to_pay">Сумма к оплате</string>
    <string name="wrong_position">Неправильный должность</string>
    <string name="user_does_not_exist">Такой пользователь не существует</string>
    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="problematic">Проблемные</string>
    <string name="contract_status">Статус договора</string>
    <string name="remainder">Остаток</string>
    <string name="serial_number">Серийный номер</string>
    <string name="my_applications">Мои заявки</string>
    <string name="application_number">Номер заявки</string>
    <string name="application_date">Дата заявки</string>
    <string name="fullname_of_client">Фио клиента</string>
    <string name="fullname_of_operator">Фио оператора</string>
    <string name="application_status">Статус заявки</string>
    <string name="application_type">Тип заявки</string>
    <string name="finance_status">Статус финанса</string>
    <string name="physical_status">Физический статус</string>
    <string name="customer_address">Адрес клиента</string>
    <string name="customer_phone_numbers">Телефоны клиента</string>
    <string name="category_of_client">Категория клиента</string>
    <string name="operator_by_plan">Оператор по плану</string>
    <string name="loading">Загрузка…</string>
    <string name="history">История</string>
    <string name="payment_schedule">График платежей</string>
    <string name="error">Ошибка</string>
    <string name="update">Обновить</string>
    <string name="left">Осталось</string>
    <string name="results">Результаты</string>
    <string name="calls">Звонки</string>
    <string name="scheduled_calls">Назначенные звонки</string>
    <string name="contract">Договор</string>
    <string name="сontribution_history">История взноса</string>
    <string name="сontribution">Взнос</string>
    <string name="amount_of_contribution">Сумма взноса</string>
    <string name="add_contribution">Добавить взнос</string>
    <string name="select_phone_number">Выберите телефон номер</string>
    <string name="bank">Банк</string>
    <string name="add_call">Добавить звонок</string>
    <string name="incoming">Входящий</string>
    <string name="outgoing">Исходящий</string>
    <string name="description">Описание</string>
    <string name="time">Время</string>
    <string name="clear_filter">Очистить фильтр</string>
    <string name="calls_for_one_month">Звонки на 1 месяц</string>
    <string name="add_incoming_call">Добавить входящий звонок</string>
    <string name="add_outgoing_call">Добавить исходящий звонок</string>
    <string name="have_not_marked_the_status">Вы не отметили статус: Выезжаю и Доехал до адреса</string>
    <string name="country_calling_code">Телефонный код страны</string>
    <string name="overdue_days">Просроченные дни</string>
    <string name="deadline_did_not_come">Срок не пришел</string>
    <string name="explanation_about_colors">Объяснение о цветах</string>
    <string name="change_result">Изменить результат</string>
    <string name="daily_plan">Ежедневный план</string>
    <string name="add_to_daily_plan">Добавить в ежедневный план</string>
    <string name="bad_request">Плохой запрос</string>
    <string name="not_found">Не найдено</string>
    <string name="select_date">Выберите дату</string>
    <string name="upcoming">Предстоящие</string>
    <string name="current">Текущие</string>
    <string name="contributions">Взносы</string>
    <string name="schedule_date">Назначить дату</string>
    <string name="schedule_time">Назначить время</string>
    <string name="schedule_call">Назначить звонок</string>
    <string name="verifying_passcode">Проверка код доступа</string>
    <string name="create_passcode">Создать код доступа</string>
    <string name="try_again">Повторите еще раз</string>
    <string name="profile">Профиль</string>
    <string name="message">Сообщения</string>
    <string name="account">Аккаунт</string>
    <string name="company">Компания</string>
    <string name="department">Отдел</string>
    <string name="branch">Филиал</string>
    <string name="open_photo">Открыть фотографию</string>
    <string name="edit_photo">Изменить фотографию</string>
    <string name="remove_photo">Удалить фотографию</string>
    <string name="wemob_authentication">Аутентификация WeMob</string>
    <string name="wemob_using_biometric_authentication">WeMob использует биометрическую аутентификацию Android</string>
    <string name="filter">Фильтр</string>

    <!--  ERRORS  -->
    <string name="empty_field">Поле не должно быть пустым</string>
    <string name="try_again_later">Повторите попытку позже</string>
    <string name="fill_out_all_fields">Пожалуйста, заполните все поля</string>
    <string name="enable_location">Пожалуйста, включите на устройстве геолокацию</string>
    <string name="internal_server_error">Внутренняя ошибка сервера</string>

    <!--  WARNINGS  -->
    <string name="really_want_to_sign_out">Точно хотите выйти ?</string>

    <!--  ARRAYS  -->
    <string-array name="language_entries">
        <item>@string/ru</item>
        <item>@string/en</item>
    </string-array>
    <string-array name="entry_values">
        <item>ru</item>
        <item>en</item>
    </string-array>
    <string-array name="user_avatar_action_entries">
        <item>@string/open_photo</item>
        <item>@string/edit_photo</item>
        <item>@string/remove_photo</item>
    </string-array>

    <string name="types_of_quantities" translatable="false">
        <![CDATA[
        (<font color="red">%1$d</font>,
        <font color="#FFC107">%2$d</font>,
        <font color="#4CAF50">%3$d</font>)
        ]]>
    </string>
</resources>