<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/finance_navigation"
    app:startDestination="@id/nav_monthly_plan">

    <fragment
        android:id="@+id/nav_monthly_plan"
        android:name="kz.aura.merp.employee.ui.fragment.finance.MonthlyPlanFragment"
        android:label="@string/monthly_plan" />
    <fragment
        android:id="@+id/nav_daily_plan"
        android:name="kz.aura.merp.employee.ui.fragment.finance.DailyPlansFragment"
        android:label="@string/daily_plan" />
    <fragment
        android:id="@+id/nav_contributions"
        android:name="kz.aura.merp.employee.ui.fragment.finance.ContributionsFragment"
        android:label="@string/contributions" />
    <fragment
        android:id="@+id/nav_calls"
        android:name="kz.aura.merp.employee.ui.fragment.finance.CallsFragment"
        android:label="@string/calls" />
    <fragment
        android:id="@+id/nav_scheduled_calls"
        android:name="kz.aura.merp.employee.ui.fragment.finance.ScheduledCallsFragment"
        android:label="@string/scheduled_calls" />

</navigation>