<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_monthly_plan"
            android:title="@string/monthlyPlan" />
        <item
            android:id="@+id/nav_daily_plan"
            android:title="@string/daily_plan" />
        <item
            android:id="@+id/nav_contributions"
            android:title="@string/contributions" />
        <item
            android:id="@+id/nav_calls"
            android:title="@string/calls" />
        <item
            android:id="@+id/nav_scheduled_calls"
            android:title="@string/scheduled_calls" />
    </group>
</menu>