<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PassCodeFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="wadawdawda"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/number1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="awdawdawdawd"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <View
        android:id="@+id/typed1"
        android:layout_width="40dp"
        android:layout_height="2dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:id="@+id/typed2"
        android:layout_width="40dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/typed1"
        app:layout_constraintStart_toEndOf="@+id/typed1"
        app:layout_constraintTop_toTopOf="@+id/typed1" />

    <View
        android:id="@+id/typed3"
        android:layout_width="40dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/typed2"
        app:layout_constraintStart_toEndOf="@+id/typed2"
        app:layout_constraintTop_toTopOf="@+id/typed2" />

    <View
        android:id="@+id/typed4"
        android:layout_width="40dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/typed3"
        app:layout_constraintStart_toEndOf="@+id/typed3"
        app:layout_constraintTop_toTopOf="@+id/typed3" />

    <Button
        android:id="@+id/number1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_background"
        android:onClick="setListenersNumber"
        android:text="@string/_1"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/number5"
        app:layout_constraintStart_toStartOf="@+id/number4" />

    <Button
        android:id="@+id/number2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/circle_background"
        android:text="@string/_2"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/number1"
        app:layout_constraintStart_toEndOf="@+id/number1" />

    <Button
        android:id="@+id/number3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/circle_background"
        android:text="@string/_3"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/number2"
        app:layout_constraintStart_toEndOf="@+id/number2" />

    <Button
        android:id="@+id/number4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/circle_background"
        android:text="@string/_4"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/number5"
        app:layout_constraintEnd_toStartOf="@+id/number5" />

    <Button
        android:id="@+id/number5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/circle_background"
        android:text="@string/_5"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typed2" />

    <Button
        android:id="@+id/number6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/circle_background"
        android:text="@string/_6"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/number5"
        app:layout_constraintStart_toEndOf="@+id/number5" />

    <Button
        android:id="@+id/number7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_background"
        android:text="@string/_7"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/number4"
        app:layout_constraintTop_toBottomOf="@+id/number4" />


    <Button
        android:id="@+id/number8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_background"
        android:text="@string/_8"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/number7"
        app:layout_constraintTop_toBottomOf="@+id/number5" />

    <Button
        android:id="@+id/number9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circle_background"
        android:text="@string/_9"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/number8"
        app:layout_constraintTop_toBottomOf="@+id/number6" />

    <Button
        android:id="@+id/number0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/circle_background"
        android:text="@string/_0"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:backgroundTint="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/deleteNumber"
        app:layout_constraintTop_toBottomOf="@+id/number8" />

    <ImageButton
        android:id="@+id/deleteNumber"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        app:backgroundTint="@color/gray"
        android:background="@drawable/circle_background"
        app:layout_constraintEnd_toEndOf="@+id/number9"
        app:layout_constraintTop_toBottomOf="@+id/number9"
        app:srcCompat="@drawable/ic_clear_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>